# ha-labelito

./: .gitignore  CHANGELOG.md  LICENSE  README.md  hacs.json  pyproject.toml  release-please-config.json  renovate.json  requirements_test.txt
.github/: CODEOWNERS
.github/workflows/: hacs.yml  hassfest.yml  lint.yml  pr-title.yml  release-please.yml  test.yml  validate.yml
custom_components/labelito/: __init__.py  api.py  binary_sensor.py  button.py  config_flow.py  const.py  coordinator.py  diagnostics.py  entity.py  intents.py  manifest.json  sensor.py  services.py  services.yaml  strings.json
custom_components/labelito/translations/: en.json  es.json
custom_sentences/en/: labelito.yaml
custom_sentences/es/: labelito.yaml
docs/: entities.md  hacs-default-submission.md  services.md  voice-assist.md
examples/: print_on_button.yaml  print_with_response.yaml
sentences/en/: labelito.yaml
sentences/es/: labelito.yaml
tests/: __init__.py  conftest.py  const.py  test_api.py  test_config_flow.py  test_coordinator.py  test_init.py  test_intents.py  test_sensor.py  test_services.py
